More 1.19.3 Changes (Creative Tabs) & More Configurations & Bug Fixes
- 1.19.3 changes how creative tabs work entirely, removed any Properties.tab calls from items/item blocks and replaced them with a general creative tab registry in ArmorPlus.java which handles the order and display of all items/blocks from the mod, 4 tabs were added and populated (AP Core Equipment, AP Extra Armors,  AP Items, AP Blocks), any suggestions on the ordering are welcome but am happy with how these look at the moment.


**Configuration changes**:
- Guardian, Super Star, Ender Dragon, Slayer armors are now able to have their very own custom effects with the ability to have all of them enabled/disabled via a config (including flight!) so feel free to mix and match to your heart's content.
- Additionally made some balance changes with their default abilities.

**Bug Fixes**
- Fixed Maces not having a texture, although their abilities will have no animation.
- Fixed a bug where setting entities on fire while holding an infused lava weapon would set yourself on fire if they damaged you.
- Introduced a bug where enemies do not provide their burn loot like fire aspect.
- Fixed a bug where armors could sometimes have blank abilities.